--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+    <script src="script.js"></script>
     <title>Restaurant</title>
 </head>
 <body>
-    
+<header> 
+<div class="container">  
+    <a href='# 'class="logo">   
+    <i class="fas fa-utensils"></i>Restaurant
+    </a>
+
+</div>    
+</header>
 </body>
 </html>
