add background-color to nav ul

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <header>
         <div class="container">
-            <div class="pre-nav">
+            <nav class="pre-nav">
                 <a href='#' class="logo">
                     <i class="fas fa-utensils"></i>Restaurant
                 </a>
-            </div>
-            <a href='#'>Call us on 08 211 78222</a>
+                <a href='#'>Call us on 08 211 78222</a>
+            </nav>
         </div>
         <nav>
             <ul>
