--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="content">
                 <h1>Try something</h1>
                 <a href="#" class="white-link">Book a Table</a>
-                <a href="#" class="white-link">View our Menu</a>
+                <a href="#" class="teal-link">View our Menu</a>
             </div>
         </div>
     </header>
